--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jewels & Accessories</title>
+  <title>Sasvata</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <div class="logo">✨ Jewels & Accessories</div>
+<img class="logo" src="logo.jpg" alt="Sastava">
+
     <nav>
       <a href="#about">About</a>
-      <a href="#testimonials">Testimonials</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -29,18 +29,6 @@
         We specialize in curating elegant, unique jewelry and accessories for every occasion.
         With a blend of modern design and timeless tradition, each piece is crafted with passion and precision.
       </p>
-    </section>
-
-    <section id="testimonials">
-      <h2>What Our Customers Say</h2>
-      <div class="testimonial">
-        <p>"Absolutely in love with the quality and detail!"</p>
-        <span>- Priya M.</span>
-      </div>
-      <div class="testimonial">
-        <p>"My go-to place for gifting something beautiful."</p>
-        <span>- Neha R.</span>
-      </div>
     </section>
 
     <section class="newsletter">
