--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     <h2>Our Collection</h2>
     <div class="product-grid">
       <div class="product-card">
-        <img src="https://via.placeholder.com/300x300" alt="Product 1"/>
+<img src="images/product1.jpg" alt="Product 1">
         <h3>Golden Aura Ring</h3>
         <p>$49.99</p>
       </div>
       <div class="product-card">
-        <img src="https://via.placeholder.com/300x300" alt="Product 2"/>
+<img src="images/product1.jpg" alt="Product 2/">
         <h3>Moonlight Earrings</h3>
         <p>$39.99</p>
       </div>
       <div class="product-card">
-        <img src="https://via.placeholder.com/300x300" alt="Product 3"/>
+<img src="images/product1.jpg" alt="Product 3/">
         <h3>Vintage Pearl Necklace</h3>
         <p>$59.99</p>
       </div>
