--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="product-card">
 <img src="images/product2.jpg" alt="Product 2/">
-        <h3>Diamond Ring</h3>
+        <h3>Elegant Stone Ring</h3>
         <p>Rs.1000</p>
       </div>
       <div class="product-card">
