--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
     <div class="product-grid">
       <div class="product-card">
 <img src="images/product1.jpg" alt="Product 1">
-        <h3>Golden Aura Ring</h3>
+        <h3>Golden Aura Earring</h3>
         <p>Rs.500</p>
       </div>
       <div class="product-card">
 <img src="images/product2.jpg" alt="Product 2/">
-        <h3>Elegant Stone Ring</h3>
+        <h3>Elegant Stone Earring</h3>
         <p>Rs.1000</p>
       </div>
       <div class="product-card">
 <img src="images/product3.jpg" alt="Product 3/">
-        <h3>Vintage Pearl Necklace</h3>
+        <h3>Vintage Earring</h3>
         <p>Rs.2000</p>
       </div>
     </div>
