--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <li><a href="#newsletter">Newsletter</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
+<div class="search-container">
+  <input type="text" id="search-input" placeholder="Search products..." />
+  <button onclick="searchProducts()">Search</button>
+</div>
     </nav>
   </header>
 
