--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 <div class="search-container">
   <input type="text" id="search-input" placeholder="Search products..." />
   <button onclick="searchProducts()">Search</button>
+
+ <button id="wishlist-toggle" title="View Wishlist" aria-label="View Wishlist">
+      ❤️ <span id="wishlist-count">0</span>
+    </button>
 </div>
     </nav>
   </header>
