--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
   <input type="text" id="search-input" placeholder="Search products..." />
   <button onclick="searchProducts()">Search</button>
 
- <button id="wishlist-toggle" title="View Wishlist" aria-label="View Wishlist">
-      ❤️ <span id="wishlist-count">0</span>
+<button id="wishlist-icon" aria-label="Wishlist">
+      <svg width="24" height="24" fill="none" stroke="#aa6c39" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
+        <path d="M20.8 4.6a5.5 5.5 0 0 0-7.8 0L12 5.6l-1-1a5.5 5.5 0 0 0-7.8 7.8l1 1L12 21.3l7.8-7.8 1-1a5.5 5.5 0 0 0 0-7.9z"/>
+      </svg>
+      <span id="wishlist-count">0</span>
     </button>
 </div>
     </nav>
