--- a/index.html
+++ b/index.html
@@ -46,17 +46,20 @@
   <section id="products" class="section products">
     <h2>Our Collection</h2>
     <div class="product-grid">
-      <div class="product-card">
+      <div class="product-card" data-product-id="1">
+<button class="product-wishlist" aria-label="Add to wishlist">♡</button>
 <img src="images/product1.jpg" alt="Product 1">
         <h3>Golden Aura Earring</h3>
         <p>Rs.500</p>
       </div>
-      <div class="product-card">
+      <div class="product-card" data-product-id="2">
+<button class="product-wishlist" aria-label="Add to wishlist">♡</button>
 <img src="images/product2.jpg" alt="Product 2/">
         <h3>Elegant Stone Earring</h3>
         <p>Rs.1000</p>
       </div>
-      <div class="product-card">
+      <div class="product-card" data-product-id="3">
+<button class="product-wishlist" aria-label="Add to wishlist">♡</button>
 <img src="images/product3.jpg" alt="Product 3/">
         <h3>Vintage Earring</h3>
         <p>Rs.2000</p>
