--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <li><a href="#newsletter">Newsletter</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-<div class="search-container">
-  <input type="text" id="search-input" placeholder="Search products..." />
-  <button onclick="searchProducts()">Search</button>
+      <div class="search-container">
+        <input type="text" id="search-input" placeholder="Search products..." />
+        <button onclick="searchProducts()">Search</button>
 
-<button id="wishlist-icon" aria-label="Wishlist">
-      <svg width="24" height="24" fill="none" stroke="#aa6c39" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" >
-        <path d="M20.8 4.6a5.5 5.5 0 0 0-7.8 0L12 5.6l-1-1a5.5 5.5 0 0 0-7.8 7.8l1 1L12 21.3l7.8-7.8 1-1a5.5 5.5 0 0 0 0-7.9z"/>
-      </svg>
-      <span id="wishlist-count">0</span>
-    </button>
-</div>
+        <button id="wishlist-icon" aria-label="Wishlist">
+          <svg width="24" height="24" fill="none" stroke="#aa6c39" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M20.8 4.6a5.5 5.5 0 0 0-7.8 0L12 5.6l-1-1a5.5 5.5 0 0 0-7.8 7.8l1 1L12 21.3l7.8-7.8 1-1a5.5 5.5 0 0 0 0-7.9z"/>
+          </svg>
+          <span id="wishlist-count">0</span>
+        </button>
+      </div>
     </nav>
   </header>
 
@@ -47,20 +47,20 @@
     <h2>Our Collection</h2>
     <div class="product-grid">
       <div class="product-card" data-product-id="1">
-<button class="wishlist-btn" onclick="toggleWishlist(this)">❤️</button>
-        <img src="images/product1.jpg" alt="Product 1">
+        <button class="product-wishlist">♡</button>
+        <img src="images/product1.jpg" alt="Golden Aura Earring">
         <h3>Golden Aura Earring</h3>
         <p>Rs.500</p>
       </div>
       <div class="product-card" data-product-id="2">
-<button class="wishlist-btn" onclick="toggleWishlist(this)">❤️</button>
-        <img src="images/product2.jpg" alt="Product 2/">
+        <button class="product-wishlist">♡</button>
+        <img src="images/product2.jpg" alt="Elegant Stone Earring">
         <h3>Elegant Stone Earring</h3>
         <p>Rs.1000</p>
       </div>
       <div class="product-card" data-product-id="3">
-<button class="wishlist-btn" onclick="toggleWishlist(this)">❤️</button>
-        <img src="images/product3.jpg" alt="Product 3/">
+        <button class="product-wishlist">♡</button>
+        <img src="images/product3.jpg" alt="Vintage Earring">
         <h3>Vintage Earring</h3>
         <p>Rs.2000</p>
       </div>
@@ -102,4 +102,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
