--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
         <li><a href="#newsletter">Newsletter</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <div class="search-container">
-        <input type="text" id="search-input" placeholder="Search products..." />
-        <button onclick="searchProducts()">Search</button>
+     <div class="search-container">
+  <div class="search-box">
+    <input type="text" id="search-input" placeholder="Search products..." />
+    <button onclick="searchProducts()">Search</button>
+  </div>
+  <button id="wishlist-icon" aria-label="Wishlist">
+    <svg width="24" height="24" fill="none" stroke="#aa6c39" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M20.8 4.6a5.5 5.5 0 0 0-7.8 0L12 5.6l-1-1a5.5 5.5 0 0 0-7.8 7.8l1 1L12 21.3l7.8-7.8 1-1a5.5 5.5 0 0 0 0-7.9z"/>
+    </svg>
+    <span id="wishlist-count">0</span>
+  </button>
+</div>
 
-        <button id="wishlist-icon" aria-label="Wishlist">
-          <svg width="24" height="24" fill="none" stroke="#aa6c39" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M20.8 4.6a5.5 5.5 0 0 0-7.8 0L12 5.6l-1-1a5.5 5.5 0 0 0-7.8 7.8l1 1L12 21.3l7.8-7.8 1-1a5.5 5.5 0 0 0 0-7.9z"/>
-          </svg>
-          <span id="wishlist-count">0</span>
-        </button>
-      </div>
     </nav>
   </header>
 
