--- a/index.html
+++ b/index.html
@@ -53,18 +53,24 @@
         <img src="images/product1.jpg" alt="Golden Aura Earring">
         <h3>Golden Aura Earring</h3>
         <p>Rs.500</p>
+  <button class="add-to-cart-btn">Add to Cart</button>
+
       </div>
       <div class="product-card" data-product-id="2">
         <button class="product-wishlist">♡</button>
         <img src="images/product2.jpg" alt="Elegant Stone Earring">
         <h3>Elegant Stone Earring</h3>
         <p>Rs.1000</p>
+  <button class="add-to-cart-btn">Add to Cart</button>
+
       </div>
       <div class="product-card" data-product-id="3">
         <button class="product-wishlist">♡</button>
         <img src="images/product3.jpg" alt="Vintage Earring">
         <h3>Vintage Earring</h3>
         <p>Rs.2000</p>
+  <button class="add-to-cart-btn">Add to Cart</button>
+
       </div>
     </div>
   </section>
