--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
     </svg>
     <span id="wishlist-count">0</span>
   </button>
+<button id="cart-icon" aria-label="Cart">
+  <svg width="24" height="24" fill="none" stroke="#aa6c39" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <circle cx="9" cy="21" r="1"></circle>
+    <circle cx="20" cy="21" r="1"></circle>
+    <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+  </svg>
+  <span id="cart-count">0</span>
+</button>
 </div>
-
     </nav>
   </header>
 
