--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#products">Products</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#newsletter">Newsletter</a></li>
+ <!--      <li><a href="#newsletter">Newsletter</a></li>-->
         <li><a href="#contact">Contact</a></li>
       </ul>
      <div class="search-container">
@@ -93,7 +93,7 @@
       <span>- Madhuri Duddula</span>
     </div>
   </section>
-
+<!--
   <section id="newsletter" class="section newsletter">
     <h2>Join Our Newsletter</h2>
     <p>Get updates on latest launches, deals, and style tips.</p>
@@ -101,7 +101,7 @@
       <input type="email" placeholder="Enter your email" required/>
       <button type="submit">Subscribe</button>
     </form>
-  </section>
+  </section>-->
 
   <section id="contact" class="section contact">
     <h2>Contact Us</h2>
