--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 
   <header class="navbar">
     <div class="logo">SASVATA</div>
-    <nav>
-      <ul>
+    <nav class="nav-center">
+      <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#products">Products</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
  <!--      <li><a href="#newsletter">Newsletter</a></li>-->
         <li><a href="#contact">Contact</a></li>
       </ul>
-     <div class="search-container">
+ </nav>
+     <div class="class="nav-icons"">
   <div class="search-box">
     <input type="text" id="search-input" placeholder="Search products..." />
     <button onclick="searchProducts()">Search</button>
@@ -38,7 +39,7 @@
   <span id="cart-count">0</span>
 </button>
 </div>
-    </nav>
+   
   </header>
 
   <section class="hero">
