--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SASVATA - Cart</title>
-  <link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="css/common.css">
+<link rel="stylesheet" href="css/cart.css">
   <style>
     /* Simple cart page styles */
     body {
