--- a/index.html
+++ b/index.html
@@ -55,31 +55,72 @@
 
   <section id="products" class="section products">
     <h2>Our Collection</h2>
+  <p>Explore our beautiful jewelry and accessories</p>
     <div class="product-grid">
-      <div class="product-card" data-product-id="1">
-        <button class="product-wishlist">♡</button>
-        <img src="images/product1.jpg" alt="Golden Aura Earring">
-        <h3>Golden Aura Earring</h3>
-        <p>Rs.500</p>
-  <button class="add-to-cart-btn">Add to Cart</button>
-
-      </div>
-      <div class="product-card" data-product-id="2">
-        <button class="product-wishlist">♡</button>
-        <img src="images/product2.jpg" alt="Elegant Stone Earring">
-        <h3>Elegant Stone Earring</h3>
-        <p>Rs.1000</p>
-  <button class="add-to-cart-btn">Add to Cart</button>
-
-      </div>
-      <div class="product-card" data-product-id="3">
-        <button class="product-wishlist">♡</button>
-        <img src="images/product3.jpg" alt="Vintage Earring">
-        <h3>Vintage Earring</h3>
-        <p>Rs.2000</p>
-  <button class="add-to-cart-btn">Add to Cart</button>
-
-      </div>
+    <!-- Product 1 -->
+    <div class="product-card">
+      <button class="product-wishlist" title="Add to wishlist">&#10084;</button>
+      <img src="images/product1.jpg" alt="Product 1" />
+      <h3>Elegant Necklace</h3>
+      <p>Gold-plated necklace with a shining pendant.</p>
+      <button class="add-to-cart-btn">Add to Cart</button>
+    </div>
+    <!-- Product 2 -->
+    <div class="product-card">
+      <button class="product-wishlist">&#10084;</button>
+      <img src="images/product2.jpg" alt="Product 2" />
+      <h3>Classic Earrings</h3>
+      <p>Stylish and comfortable for daily wear.</p>
+      <button class="add-to-cart-btn">Add to Cart</button>
+    </div>
+    <!-- Product 3 -->
+    <div class="product-card">
+      <button class="product-wishlist">&#10084;</button>
+      <img src="images/product3.jpg" alt="Product 3" />
+      <h3>Diamond Ring</h3>
+      <p>Elegant ring with sparkling diamonds.</p>
+      <button class="add-to-cart-btn">Add to Cart</button>
+    </div>
+    <!-- Product 4 -->
+    <div class="product-card">
+      <button class="product-wishlist">&#10084;</button>
+      <img src="images/product1.jpg" alt="Product 4" />
+      <h3>Elegant Necklace</h3>
+      <p>Gold-plated necklace with a shining pendant.</p>
+      <button class="add-to-cart-btn">Add to Cart</button>
+    </div>
+    <!-- Product 5 -->
+    <div class="product-card">
+      <button class="product-wishlist">&#10084;</button>
+      <img src="images/product2.jpg" alt="Product 5" />
+      <h3>Classic Earrings</h3>
+      <p>Stylish and comfortable for daily wear.</p>
+      <button class="add-to-cart-btn">Add to Cart</button>
+    </div>
+    <!-- Product 6 -->
+    <div class="product-card">
+      <button class="product-wishlist">&#10084;</button>
+      <img src="images/product3.jpg" alt="Product 6" />
+      <h3>Diamond Ring</h3>
+      <p>Elegant ring with sparkling diamonds.</p>
+      <button class="add-to-cart-btn">Add to Cart</button>
+    </div>
+    <!-- Product 7 -->
+    <div class="product-card">
+      <button class="product-wishlist">&#10084;</button>
+      <img src="images/product1.jpg" alt="Product 7" />
+      <h3>Elegant Necklace</h3>
+      <p>Gold-plated necklace with a shining pendant.</p>
+      <button class="add-to-cart-btn">Add to Cart</button>
+    </div>
+    <!-- Product 8 -->
+    <div class="product-card">
+      <button class="product-wishlist">&#10084;</button>
+      <img src="images/product2.jpg" alt="Product 8" />
+      <h3>Classic Earrings</h3>
+      <p>Stylish and comfortable for daily wear.</p>
+      <button class="add-to-cart-btn">Add to Cart</button>
+    </div>
     </div>
   </section>
 
